<resources>
    <string name="app_name">GitHub</string>
    <string name="menu_2">Menu 2</string>
    <string name="user_image">User Image</string>
    <string name="searchbar">Search</string>
    <string name="username">Username</string>
    <string name="description">Description</string>
    <string name="tab_text_1">Followers</string>
    <string name="tab_text_2">Following</string>
    <string name="content_tab_followers">Ini followers</string>
    <string name="content_tab_following">Ini following</string>
    <string name="noFollowes">0</string>
    <string name="noFollowing">0</string>
    <string name="namaReal">Nama Asli</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="favorite">Favorite</string>
    <string name="date">Date</string>
    <string name="title">Title</string>
    <string name="Delete">Delete</string>
    <string name="iniFavorite">Favorite</string>
    <string name="iniSetting">Setting</string>
    <string name="button_back">Back</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="light_mode">Light Mode</string>
    <string name="GitHub">GitHub</string>

</resources>